--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,12 @@ ext {
 dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.liquibase:liquibase-core'
 
     runtimeOnly 'org.postgresql:postgresql'
-    runtimeOnly 'mysql:mysql-connector-java'
+    // runtimeOnly 'mysql:mysql-connector-java'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 
     compile( [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0'])
