--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     hibernate:
       ddl-auto: validate
     mapping-resources:
+      - db/mappings/asamblea.xml
       - db/mappings/persona.xml
       - db/mappings/bienprivado.xml
       - db/mappings/personalapoyo.xml
