--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       ddl-auto: validate
     mapping-resources:
       - db/mappings/asamblea.xml
+      - db/mappings/asistente.xml
       - db/mappings/persona.xml
       - db/mappings/bienprivado.xml
       - db/mappings/personalapoyo.xml
